# OOD-2

./: CMakeLists.txt
part1/: CStatistics.h  Observer.h  WeatherData.h  main.cpp
part1-3/: CStatistics.h  Observer.h  WeatherData.h  main.cpp
part1/tests/: WeatherTests.cpp
part4-5/: Observer.h  WeatherData.h
part4-5/tests/: WeatherTests.cpp
part4-6/: CStatistics.h  Observer.h  WeatherData.h  main.cpp
part7/: WeatherData.h
part7-2/: Observer.h  WeatherData.h  main.cpp
part7-2/tests/: WeatherTests.cpp
